@@ -10,7 +10,7 @@
 <div class="section">
   <p><a href="<?= $this->url(array("controller" => "docs", "action" => "about"), '', true); ?>">About Us</a></p>
   <p><a href="<?= $this->url(array("controller" => "docs", "action" => "faq"), '', true); ?>">Frequently Asked Questions</a></p>
-  <p><a href="<?= $this->url(array("controller" => "docs", "action" => "faq"), '', true); ?>#help" class="help">ETD Help</a></p>
+  <p><a href="<?= $this->url(array("controller" => "docs"), '', true); ?>/help" class="help">ETD Help</a></p>
   <p><a href="<?= $this->url(array("controller" => "docs", "action" => "policies"), '', true); ?>">Policies and Procedures</a></p>
   <p><a href="<?= $this->url(array("controller" => "docs", "action" => "ip"), '', true); ?>">Intellectual Property</a></p>
 </div>
