@@ -1,7 +1,8 @@
 ETD Release Notes
 =================
 Version 1.7.1 - August 2010 (bugfix)
- * Fixed bug in pagination code in searchController
+ * Fixed bug in pagination code in searchController that caused results with one item to fail.
+ * Changed link to ETD Help page on side nav.
 
 
 Version 1.7 - August 2010 (enhancements)
